--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,102 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #000;
+  background-image: url("../../client/public/assets/background.png");
+  overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  user-select: none;
+}
+
+.App {
+  font-family: sans-serif;
+  text-align: center;
+
+  width: 80%;
+  height: 50%;
+  
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  
+  margin: auto;
+}
+
+.h1-header {
+  font-size: 45px;
+  font-weight: bold;
+  margin-bottom: 40px;
+  color: #f8f4e6;
+}
+
+.h2-header {
+  font-size: 24px;
+  margin-top: 0;
+  color: #f8f4e6;
+}
+
+#table {
+  width: 80%;
+  height: 600px;
+  background-color: rgba(100, 100, 100, 0.5);
+  border: 5px solid #502801;
+  border-radius: 5px;
+  margin: auto;
+}
+
+.arrow_box_common {
+  position: relative;
+  background: #8f2424;
+  padding: 0px;
+  text-align: center;
+  color: #ffffff;
+  border-radius: 8px;
+}
+
+.arrow_box_common:after {
+  border: solid transparent;
+  content: "";
+  height: 0;
+  width: 0;
+  pointer-events: none;
+  position: absolute;
+  border-color: rgba(0, 95, 158, 0);
+  border-top-width: 10px;
+  border-bottom-width: 10px;
+  border-left-width: 10px;
+  border-right-width: 10px;
+  margin-left: -10px;
+}
+
+.arrow_box_player {
+  font-size: 1em;
+  width: 80px;
+  height: 40px;
+  line-height: 40px;
+  margin: 0px auto;
+}
+.arrow_box_player:after {
+  bottom: 100%;
+  left: 50%;
+  border-bottom-color: #8f2424;
+}
+
+.arrow_box_dealer {
+  font-size: 0.9em;
+  width: 70px;
+  height: 30px;
+  line-height: 30px;
+  margin: 0px auto 20px;
+}
+.arrow_box_dealer:after {
+  top: 100%;
+  left: 50%;
+  border-top-color: #8f2424;
+}
+
+.satya {
+  justify-content: center;
 }
