--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,7 @@ body {
   text-align: center;
 
   width: 80%;
-  height: 50%;
+  height: 60%;
   
   position: absolute;
   top: 0;
@@ -24,6 +24,12 @@ body {
   
   margin: auto;
 }
+
+.delt-card {
+  display: inline-block;
+  margin: 0.2em;
+}
+
 
 .h1-header {
   font-size: 45px;
